--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ http://www.tooplate.com/view/2109-the-card
 
         <!-- Site header -->
         <header class="tm-site-header-box tm-bg-dark">
-          <h1 class="tm-site-title">Photo film</h1>
-          <p class="mb-0 tm-site-subtitle">mHing & nHuad</p>
+          <h1 class="tm-site-title">ขายรถยนต์มือสองทุกชนิด</h1>
+          <p class="mb-0 tm-site-subtitle">และรับซื้อรถยนต์ทุกชนิด</p>
         </header>
       </div>
       <!-- tm-top-container -->
@@ -82,13 +82,13 @@ http://www.tooplate.com/view/2109-the-card
                 </h2>
                 <div class="tm-textbox tm-bg-dark">
                   <p>
-                    A place to keep memories between the two of us, which is the memory of a film reel.
+                    เว็บเราขายรถย์และรับซื้อรถยนต์ด้วยความสุจริตและซื่อตรงต่อลูกค้าทุกท่าน
                   </p>
                   <p class="mb-0">
-                    Each roll of film, each shutter is intentional.
+                    ถ้าสนใจสามารถสอบถามและติดต่อเราได้เลย มีการค้าขายมามากกว่า 5 ปี
                   </p>
                 </div>
-                <a href="#" id="tm_about_link" data-linkid="1" class="tm-link">Read More</a>
+                <a href="#" id="tm_about_link" data-linkid="1" class="tm-link">เพิ่มเติม</a>
               </section>
 
               <!-- Section 1 About Me -->
@@ -96,17 +96,17 @@ http://www.tooplate.com/view/2109-the-card
                 <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                   <h2 class="tm-text-blue mb-4">1st roll</h2>
                   <p class="mb-4">
-                    It's an expensive film Koduk Untramax400 
+                    มีรถยนต์เข้าใหม่เสมอ  
                   </p>
                   <p class="mb-4">
-                    with a new camera canon canonnet QL-17
+                    สามารถจัดไฟแนนต์ได้ทุกคัน เพียงแค่ยื่นเอกสาร 
                   </p>
                   <a
                     href="#"
                     id="tm_work_link"
                     data-linkid="2"
                     class="tm-link m-0"
-                    >Next</a
+                    >ต่อไป</a
                   >
                 </div>
               </section>
@@ -115,47 +115,47 @@ http://www.tooplate.com/view/2109-the-card
               <section class="tm-section tm-section-2 mx-auto">
                 <div class="grid tm-gallery">
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/000058.jpg" alt="Image 1" class="" />
+                    <img src="img/car1.jpg" alt="Image 1" class="" />
                     <figcaption>
                       <h2>
-                        Double exposure
-                        <span>Butiful</span>
+                        รถตู้ราคาดี 
+                        <span>490,000 บาท</span>
                       </h2>
-                      <p>Double exposure So happy.</p>
-                      <a href="img/000058.jpg">View more</a>
+                      <p>รถเอกสารครบ สภาพดี </p>
+                      <a href="img/car1.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/000019.JPG" alt="Pretty Girl" class="" />
+                    <img src="img/car2.jpg" alt="Pretty Girl" class="" />
                     <figcaption>
                       <h2>
-                        mHing
-                        <span>Picture</span>
+                        รถกระบะสวย
+                        <span>3******</span>
                       </h2>
-                      <p>Vivamus feugiat, neque sed.</p>
-                      <a href="img/000019.JPG">View more</a>
+                      <p>รถเอกสารครบ สภาพดี </p>
+                      <a href="img/car2.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/000054.JPG" alt="Red Flowers" class="" />
+                    <img src="img/car3.jpg" alt="Red Flowers" class="" />
                     <figcaption>
                       <h2>
-                        A bunch of
-                        <span>Red Flower</span>
+                        รถเก๋งราคาถูก
+                        <span>69,000</span>
                       </h2>
-                      <p>Integer pellentesque nisi iaculis sapien.</p>
-                      <a href="img/000054.JPG">View more</a>
+                      <p>เอกสารครบ รถสวย</p>
+                      <a href="img/car3.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/000060.JPG" alt="Stairs" class="" />
+                    <img src="img/car4.jpg" alt="Stairs" class="" />
                     <figcaption>
                       <h2>
-                        Thoughtful
-                        <span>Goliath</span>
+                        รถกระบะสวย
+                        <span>3******</span>
                       </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/000060.JPG">View more</a>
+                      <p>เอกสารครบ รถสวย</p>
+                      <a href="img/car4.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -368,10 +368,10 @@ http://www.tooplate.com/view/2109-the-card
         // https://www.jqueryscript.net/slideshow/Simple-jQuery-Background-Image-Slideshow-with-Fade-Transitions-Background-Cycle.html
         bgCycle = $("body").backgroundCycle({
           imageUrls: [
-            "img/000040.JPG",
-            "img/000062.JPG",
-            "img/000052.JPG",
-            "img/000021.jpg"
+            "img/p1.jpg",
+            "img/p1.jpg",
+            "img/p1.jpg",
+            "img/p1.jpg"
           ],
           fadeSpeed: 2000,
           duration: -1,
