--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@ http://www.tooplate.com/view/2109-the-card
         // https://www.jqueryscript.net/slideshow/Simple-jQuery-Background-Image-Slideshow-with-Fade-Transitions-Background-Cycle.html
         bgCycle = $("body").backgroundCycle({
           imageUrls: [
-            "img/p1.jpg",
-            "img/p1.jpg",
-            "img/p1.jpg",
-            "img/p1.jpg"
+            "img/A1.mp4",
+            "img/A1.mp4",
+            "img/A1.mp4",
+            "img/A1.mp4"
           ],
           fadeSpeed: 2000,
           duration: -1,
